Fix encoding issue in .env.example - fix UTF-8 character corruption
Replace corrupted Cyrillic characters in comments with properly encoded UTF-8 text. Simplify configuration example by removing HTML tags from comments.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-﻿# Telegram Bot Configuration
-# РЎРєРѕРїРёСЂСѓР№С‚Рµ СЌС‚РѕС‚ С„Р°Р№Р» РІ .env Рё Р·Р°РїРѕР»РЅРёС‚Рµ СЂРµР°Р»СЊРЅС‹РјРё Р·РЅР°С‡РµРЅРёСЏРјРё
+# Telegram Bot Configuration
 
-# РўРѕРєРµРЅ Р±РѕС‚Р° РѕС‚ @BotFather
+# Telegram Bot Token from @BotFather
 TELEGRAM_BOT_TOKEN=123456789:ABCdefGHIjklMNOpqrsTUVwxyz
 
-# ID Р°РґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂРѕРІ С‡РµСЂРµР· Р·Р°РїСЏС‚СѓСЋ
+# Admin user ID for admin commands
 ADMIN_IDS=123456789,987654321
 
-# РџСѓС‚СЊ Рє Р±Р°Р·Рµ РґР°РЅРЅС‹С… (РѕРїС†РёРѕРЅР°Р»СЊРЅРѕ, РїРѕ СѓРјРѕР»С‡Р°РЅРёСЋ bot_database.db)
+# Database path
 DB_PATH=bot_database.db
